manifests/production/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: supplychainvisibility-ingress
  namespace: supplychainvisibility
  annotations:
    kubernetes.io/ingress.class: nginx
    networking.gke.io/managed-certificates: "supplychainvisibility-cert"
    cert-manager.io/cluster-issuer: letsencrypt # Added annotation for cert-manager
spec:
  tls:
    - hosts:
        - gke.golive.settyl.com
      secretName: supplychainvisibility-tls # Using the secret generated by Cert-Manager
  rules:
    - host: gke.staging.golive.settyl.com # Specify the hostname
      http:
        paths:
          # Path to match /api/healthcheck
          - path: /api/healthcheck
            pathType: Prefix
            backend:
              service:
                name: configmanagementapi
                port:
                  number: 8000
